--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.5",
+    "@mui/material": "^5.12.1",
     "@mui/x-data-grid": "^5.17.2",
+    "@mui/x-date-pickers": "^6.2.1",
     "@nivo/geo": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.8.5",
@@ -25,6 +26,7 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "chart.js": "^3.9.1",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-admin": "^4.9.3",
@@ -33,8 +35,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^5.0.4",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -61,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4"
   }
 }
