--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@mui/material": "^5.12.1",
     "@mui/x-data-grid": "^5.17.2",
     "@mui/x-date-pickers": "^6.2.1",
-    "@nivo/geo": "^0.80.0",
-    "@nivo/pie": "^0.80.0",
+    "@nivo/geo": "^0.63.0",
+    "@nivo/pie": "^0.63.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -25,6 +25,7 @@
     "@types/node": "^18.15.13",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.4.0",
     "chart.js": "^3.9.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
