--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@mui/material": "^5.12.1",
     "@mui/x-data-grid": "^5.17.2",
     "@mui/x-date-pickers": "^6.2.1",
-    "@nivo/geo": "^0.63.0",
-    "@nivo/pie": "^0.63.0",
+    "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
