--- a/package.json
+++ b/package.json
@@ -3,42 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@fullcalendar/core": "^5.11.3",
-    "@fullcalendar/daygrid": "^5.11.3",
-    "@fullcalendar/interaction": "^5.11.3",
-    "@fullcalendar/list": "^5.11.3",
-    "@fullcalendar/react": "^5.11.2",
-    "@fullcalendar/timegrid": "^5.11.3",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.12.1",
-    "@mui/x-data-grid": "^5.17.2",
-    "@mui/x-date-pickers": "^6.2.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
+    "@mui/x-date-pickers": "^6.3.1",
     "@nivo/line": "^0.83.0",
-    "@nivo/pie": "^0.80.0",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^18.15.13",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
+    "@nivo/pie": "^0.83.0",
     "axios": "^1.4.0",
-    "chart.js": "^3.9.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-admin": "^4.9.3",
-    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "typescript": "^4.9.5",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,6 +46,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.0.4"
+    "@types/react-dom": "^18.2.4"
   }
 }
